Shift-space doesn't type space in type-in fields (user expectation bug?) #47841

Closed
opened 2016-03-18 17:12:47 +01:00 by Adrian Winchell · 9 comments

System Information
Windows 10, nVidia GeForce GTX 550 Ti

Blender Version
Broken: 2.76b [f337fea] 2.77 test builds [431a5b6]
Worked: possibly never?

Short description of error
In any fields that allow keyboard entry- but NOT in the text editor or python console - having 'shift' held when pressing the space bar does not type a space. In the text editor or python console it does type a space, as expected. This is largely just a minor annoyance, as when I'm renaming bone hierarchies, I wind up missing spaces and creating bones that don't x-mirror properly.

Exact steps for others to reproduce the error
Open a new Blender file. In any means of renaming the default cube (viewport properties - [x] panel, double click its name in outliner, or object name display in object datablock section of Properties editor) attempt to give it a name that contains a space while holding down shift. (like doing all-caps manually, ie: "CUBE OF DOOM"). Same is true of any text-entry fields, even numeric fields (although it matters far less as these are evaluated when enter is pressed).

**System Information** Windows 10, nVidia GeForce GTX 550 Ti **Blender Version** Broken: 2.76b [f337fea] 2.77 test builds [431a5b6] Worked: possibly never? **Short description of error** In any fields that allow keyboard entry- but NOT in the text editor or python console - having 'shift' held when pressing the space bar does not type a space. In the text editor or python console it does type a space, as expected. This is largely just a minor annoyance, as when I'm renaming bone hierarchies, I wind up missing spaces and creating bones that don't x-mirror properly. **Exact steps for others to reproduce the error** Open a new Blender file. In any means of renaming the default cube (viewport properties - [x] panel, double click its name in outliner, or object name display in object datablock section of Properties editor) attempt to give it a name that contains a space while holding down shift. (like doing all-caps manually, ie: "CUBE OF DOOM"). Same is true of any text-entry fields, even numeric fields (although it matters far less as these are evaluated when enter is pressed).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @snapai

Added subscriber: @snapai
Member

Added subscribers: @MartijnBerger, @JulianEisel

Added subscribers: @MartijnBerger, @JulianEisel
Member

Working fine here. IIRC, shift+space was used for activating IME (input method editor) though, for which we use a completely own backend on Windows. Maybe you use a non-Latin keyboard layout that has IME support? Also, just to be sure, you might want to check your keyboard layout settings and disable everything IME related.

@MartijnBerger, since this could really well be a Windows only issue, mind trying?

Working fine here. IIRC, shift+space was used for activating IME (input method editor) though, for which we use a completely own backend on Windows. Maybe you use a non-Latin keyboard layout that has IME support? Also, just to be sure, you might want to check your keyboard layout settings and disable everything IME related. @MartijnBerger, since this could really well be a Windows only issue, mind trying?

I'm using a standard US keyboard layout, a Logitech K120, their basic wired QWERTY keyboard, on my Windows 10 desktop PC.

Same issue is present on my Lenovo X220T laptop running Windows 7 and using its built-in keyboard,

and on a relative's Dell Inspiron 3521 running Windows 8.1 on its built in keyboard.

All three are using default US English language system settings, and a standard US QWERTY keyboard.

Issue is not present on a MacBook 2010, this certainly appears to be a Windows-specific issue.

I'm using a standard US keyboard layout, a Logitech K120, their basic wired QWERTY keyboard, on my Windows 10 desktop PC. Same issue is present on my Lenovo X220T laptop running Windows 7 and using its built-in keyboard, and on a relative's Dell Inspiron 3521 running Windows 8.1 on its built in keyboard. All three are using default US English language system settings, and a standard US QWERTY keyboard. Issue is not present on a MacBook 2010, this certainly appears to be a Windows-specific issue.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Seems windows specific, can confirm the issue.

Seems windows specific, can confirm the issue.

This issue was referenced by b34f177a39

This issue was referenced by b34f177a39ce9fdfac05f60d21f6b763833f00f2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47841
No description provided.